<resources>
    <string name="app_name">PhaseOne</string>
    <string name="profile_name"><u>Brandon Johnson</u></string>
    <string name="profile_track">Track: Android</string>
    <string name="profile_country">Country: South Africa</string>
    <string name="profile_email">Email: bjohnso@student.wethinkcode.co.za</string>
    <string name="profile_phone">Phone Number: +27822208657</string>
    <string name="profile_slack">Slack Username: \@bjohnso</string>

</resources>
